Fix fake peer response layout bug in old mobile safari

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -739,3 +739,10 @@ $page-transition-duration: 1s;
   padding-left: 0;
   padding-right: 0;
 }
+
+
+.peer-response {
+  margin: 1em 1em 0 1em;
+  display: flex;
+  align-items: center;
+}
